src/y.output
Terminals unused in grammar

   T_UNKNOWN


Grammar

    0 $accept: specification $end

    1 specification: %empty
    2              | definitions

    3 definitions: definition
    4            | definition definitions

    5 definition: type_dcl T_SEMICOLON
    6           | const_dcl T_SEMICOLON
    7           | except_dcl T_SEMICOLON
    8           | interface T_SEMICOLON
    9           | module T_SEMICOLON
   10           | value T_SEMICOLON
   11           | pragma
   12           | error

   13 pragma: T_PRAGMA

   14 $@1: %empty

   15 $@2: %empty

   16 module: T_MODULE T_IDENTIFIER $@1 T_LEFT_CURLY_BRACKET definitions $@2 T_RIGHT_CURLY_BRACKET

   17 interface: interface_dcl
   18          | forward_dcl

   19 interface_dcl: interface_header T_LEFT_CURLY_BRACKET interface_body T_RIGHT_CURLY_BRACKET

   20 forward_dcl: T_INTERFACE T_IDENTIFIER
   21            | T_ABSTRACT T_INTERFACE T_IDENTIFIER

   22 interface_header: T_INTERFACE T_IDENTIFIER
   23                 | T_INTERFACE T_IDENTIFIER interface_inheritance_spec
   24                 | T_ABSTRACT T_INTERFACE T_IDENTIFIER
   25                 | T_ABSTRACT T_INTERFACE T_IDENTIFIER interface_inheritance_spec

   26 interface_body: %empty
   27               | exports

   28 exports: export
   29        | export exports

   30 export: type_dcl T_SEMICOLON
   31       | const_dcl T_SEMICOLON
   32       | except_dcl T_SEMICOLON
   33       | attr_dcl T_SEMICOLON
   34       | op_dcl T_SEMICOLON

   35 interface_inheritance_spec: T_COLON interface_names

   36 interface_names: scoped_names

   37 scoped_names: scoped_name
   38             | scoped_name T_COMMA scoped_names

   39 scoped_name: T_IDENTIFIER
   40            | T_SCOPE T_IDENTIFIER
   41            | scoped_name T_SCOPE T_IDENTIFIER

   42 value: value_dcl
   43      | value_abs_dcl
   44      | value_box_dcl
   45      | value_forward_dcl

   46 value_forward_dcl: T_VALUETYPE T_IDENTIFIER
   47                  | T_ABSTRACT T_VALUETYPE T_IDENTIFIER

   48 value_box_dcl: T_VALUETYPE T_IDENTIFIER type_spec

   49 value_abs_dcl: T_ABSTRACT T_VALUETYPE T_IDENTIFIER T_LEFT_CURLY_BRACKET value_body T_RIGHT_CURLY_BRACKET
   50              | T_ABSTRACT T_VALUETYPE T_IDENTIFIER value_inheritance_spec T_LEFT_CURLY_BRACKET value_body T_RIGHT_CURLY_BRACKET

   51 value_body: %empty
   52           | exports

   53 value_dcl: value_header T_LEFT_CURLY_BRACKET value_elements T_RIGHT_CURLY_BRACKET
   54          | value_header T_LEFT_CURLY_BRACKET T_RIGHT_CURLY_BRACKET

   55 value_elements: value_element
   56               | value_element value_elements

   57 value_header: T_VALUETYPE T_IDENTIFIER value_inheritance_spec
   58             | T_CUSTOM T_VALUETYPE T_IDENTIFIER value_inheritance_spec
   59             | T_VALUETYPE T_IDENTIFIER
   60             | T_CUSTOM T_VALUETYPE T_IDENTIFIER

   61 value_inheritance_spec: T_COLON value_inheritance_bases
   62                       | T_COLON value_inheritance_bases T_SUPPORTS interface_names
   63                       | T_SUPPORTS interface_names

   64 value_inheritance_bases: value_name
   65                        | value_name T_COMMA value_names
   66                        | T_TRUNCATABLE value_name
   67                        | T_TRUNCATABLE value_name T_COMMA value_names

   68 value_names: scoped_names

   69 value_name: scoped_name

   70 value_element: export
   71              | state_member
   72              | init_dcl

   73 state_member: T_PUBLIC type_spec declarators T_SEMICOLON
   74             | T_PRIVATE type_spec declarators T_SEMICOLON

   75 init_dcl: T_FACTORY T_IDENTIFIER T_LEFT_PARANTHESIS init_param_decls T_RIGHT_PARANTHESIS T_SEMICOLON

   76 init_param_decls: init_param_decl
   77                 | init_param_decl T_COMMA init_param_decls

   78 init_param_decl: init_param_attribute param_type_spec simple_declarator

   79 init_param_attribute: T_IN

   80 const_dcl: T_CONST const_type T_IDENTIFIER T_EQUAL const_exp

   81 const_type: integer_type
   82           | char_type
   83           | wide_char_type
   84           | boolean_type
   85           | floating_pt_type
   86           | string_type
   87           | wide_string_type
   88           | fixed_pt_const_type
   89           | scoped_name
   90           | octet_type

   91 const_exp: or_expr

   92 or_expr: xor_expr
   93        | or_expr T_VERTICAL_LINE xor_expr

   94 xor_expr: and_expr
   95         | xor_expr T_CIRCUMFLEX and_expr

   96 and_expr: shift_expr
   97         | and_expr T_AMPERSAND shift_expr

   98 shift_expr: add_expr
   99           | shift_expr T_SHIFTRIGHT add_expr
  100           | shift_expr T_SHIFTLEFT add_expr

  101 add_expr: mult_expr
  102         | add_expr T_PLUS_SIGN mult_expr
  103         | add_expr T_MINUS_SIGN mult_expr

  104 mult_expr: unary_expr
  105          | mult_expr T_ASTERISK unary_expr
  106          | mult_expr T_SOLIDUS unary_expr
  107          | mult_expr T_PERCENT_SIGN unary_expr

  108 unary_expr: T_MINUS_SIGN primary_expr
  109           | T_PLUS_SIGN primary_expr
  110           | T_TILDE primary_expr
  111           | primary_expr

  112 primary_expr: scoped_name
  113             | literal
  114             | T_LEFT_PARANTHESIS const_exp T_RIGHT_PARANTHESIS

  115 literal: T_INTEGER_LITERAL
  116        | T_string_literal
  117        | T_CHARACTER_LITERAL
  118        | T_FIXED_PT_LITERAL
  119        | T_FLOATING_PT_LITERAL
  120        | T_TRUE
  121        | T_FALSE

  122 positive_int_const: const_exp

  123 type_dcl: T_TYPEDEF type_spec declarators
  124         | struct_type
  125         | union_type
  126         | enum_type
  127         | T_NATIVE simple_declarator

  128 type_spec: simple_type_spec
  129          | constr_type_spec

  130 simple_type_spec: base_type_spec
  131                 | template_type_spec
  132                 | scoped_name

  133 base_type_spec: floating_pt_type
  134               | integer_type
  135               | char_type
  136               | wide_char_type
  137               | boolean_type
  138               | octet_type
  139               | any_type
  140               | object_type
  141               | value_base_type
  142               | principal_type

  143 template_type_spec: sequence_type
  144                   | string_type
  145                   | wide_string_type
  146                   | fixed_pt_type

  147 constr_type_spec: struct_type
  148                 | union_type
  149                 | enum_type

  150 declarators: declarator
  151            | declarator T_COMMA declarators

  152 declarator: simple_declarator
  153           | complex_declarator

  154 simple_declarator: T_IDENTIFIER

  155 complex_declarator: array_declarator

  156 floating_pt_type: T_FLOAT
  157                 | T_DOUBLE
  158                 | T_LONG T_DOUBLE

  159 integer_type: signed_int
  160             | unsigned_int

  161 signed_int: signed_long_int
  162           | signed_short_int
  163           | signed_longlong_int

  164 signed_short_int: T_SHORT

  165 signed_long_int: T_LONG

  166 signed_longlong_int: T_LONG T_LONG

  167 unsigned_int: unsigned_long_int
  168             | unsigned_short_int
  169             | unsigned_longlong_int

  170 unsigned_short_int: T_UNSIGNED T_SHORT

  171 unsigned_long_int: T_UNSIGNED T_LONG

  172 unsigned_longlong_int: T_UNSIGNED T_LONG T_LONG

  173 char_type: T_CHAR

  174 wide_char_type: T_WCHAR

  175 boolean_type: T_BOOLEAN

  176 octet_type: T_OCTET

  177 any_type: T_ANY

  178 object_type: T_OBJECT

  179 @3: %empty

  180 struct_type: T_STRUCT T_IDENTIFIER @3 T_LEFT_CURLY_BRACKET member_list T_RIGHT_CURLY_BRACKET

  181 member_list: member
  182            | member member_list

  183 member: type_spec declarators T_SEMICOLON

  184 @4: %empty

  185 union_type: T_UNION T_IDENTIFIER T_SWITCH T_LEFT_PARANTHESIS switch_type_spec T_RIGHT_PARANTHESIS @4 T_LEFT_CURLY_BRACKET switch_body T_RIGHT_CURLY_BRACKET

  186 switch_type_spec: integer_type
  187                 | char_type
  188                 | boolean_type
  189                 | enum_type
  190                 | scoped_name

  191 switch_body: case
  192            | case switch_body

  193 case: case_label case
  194     | case_label element_spec T_SEMICOLON

  195 case_label: T_CASE const_exp T_COLON
  196           | T_DEFAULT T_COLON

  197 element_spec: type_spec declarator

  198 enum_type: T_ENUM T_IDENTIFIER T_LEFT_CURLY_BRACKET enumerators T_RIGHT_CURLY_BRACKET

  199 enumerators: enumerator
  200            | enumerator T_COMMA enumerators

  201 enumerator: T_IDENTIFIER

  202 sequence_type: T_SEQUENCE T_LESS_THAN_SIGN simple_type_spec T_COMMA positive_int_const T_GREATER_THAN_SIGN
  203              | T_SEQUENCE T_LESS_THAN_SIGN simple_type_spec T_GREATER_THAN_SIGN

  204 string_type: T_STRING T_LESS_THAN_SIGN positive_int_const T_GREATER_THAN_SIGN
  205            | T_STRING

  206 wide_string_type: T_WSTRING T_LESS_THAN_SIGN positive_int_const T_GREATER_THAN_SIGN
  207                 | T_WSTRING

  208 array_declarator: T_IDENTIFIER fixed_array_sizes

  209 fixed_array_sizes: fixed_array_size
  210                  | fixed_array_size fixed_array_sizes

  211 fixed_array_size: T_LEFT_SQUARE_BRACKET positive_int_const T_RIGHT_SQUARE_BRACKET

  212 attr_dcl: T_ATTRIBUTE param_type_spec simple_declarators
  213         | T_READONLY T_ATTRIBUTE param_type_spec simple_declarators

  214 simple_declarators: simple_declarator
  215                   | simple_declarator T_COMMA simple_declarators

  216 except_dcl: T_EXCEPTION T_IDENTIFIER T_LEFT_CURLY_BRACKET members T_RIGHT_CURLY_BRACKET

  217 members: %empty
  218        | member members

  219 op_dcl: op_attribute op_type_spec T_IDENTIFIER parameter_dcls raises_expr context_expr

  220 op_attribute: %empty
  221             | T_ONEWAY

  222 op_type_spec: param_type_spec
  223             | T_VOID

  224 parameter_dcls: T_LEFT_PARANTHESIS param_dcls T_RIGHT_PARANTHESIS
  225               | T_LEFT_PARANTHESIS T_RIGHT_PARANTHESIS

  226 param_dcls: param_dcl
  227           | param_dcl T_COMMA param_dcls

  228 param_dcl: param_attribute param_type_spec simple_declarator

  229 param_attribute: T_IN
  230                | T_OUT
  231                | T_INOUT

  232 raises_expr: %empty
  233            | T_RAISES T_LEFT_PARANTHESIS scoped_names T_RIGHT_PARANTHESIS

  234 context_expr: %empty
  235             | T_CONTEXT T_LEFT_PARANTHESIS string_literals T_RIGHT_PARANTHESIS

  236 string_literals: T_string_literal
  237                | T_string_literal T_COMMA string_literals

  238 T_string_literal: T_STRING_LITERAL
  239                 | T_STRING_LITERAL T_string_literal

  240 param_type_spec: base_type_spec
  241                | string_type
  242                | wide_string_type
  243                | scoped_name

  244 fixed_pt_type: T_FIXED T_LESS_THAN_SIGN positive_int_const T_COMMA T_INTEGER_LITERAL T_GREATER_THAN_SIGN

  245 fixed_pt_const_type: T_FIXED

  246 value_base_type: T_VALUEBASE

  247 principal_type: T_PRINCIPAL


Terminals, with rules where they appear

$end (0) 0
error (256) 12
T_AMPERSAND (258) 97
T_ANY (259) 177
T_ASTERISK (260) 105
T_ATTRIBUTE (261) 212 213
T_BOOLEAN (262) 175
T_CASE (263) 195
T_CHAR (264) 173
T_CHARACTER_LITERAL (265) 117
T_CIRCUMFLEX (266) 95
T_COLON (267) 35 61 62 195 196
T_COMMA (268) 38 65 67 77 151 200 202 215 227 237 244
T_CONST (269) 80
T_CONTEXT (270) 235
T_DEFAULT (271) 196
T_DOUBLE (272) 157 158
T_ENUM (273) 198
T_EQUAL (274) 80
T_EXCEPTION (275) 216
T_FALSE (276) 121
T_FIXED (277) 244 245
T_FIXED_PT_LITERAL (278) 118
T_FLOAT (279) 156
T_FLOATING_PT_LITERAL (280) 119
T_GREATER_THAN_SIGN (281) 202 203 204 206 244
T_IDENTIFIER (282) 16 20 21 22 23 24 25 39 40 41 46 47 48 49 50 57
    58 59 60 75 80 154 180 185 198 201 208 216 219
T_IN (283) 79 229
T_INOUT (284) 231
T_INTEGER_LITERAL (285) 115 244
T_INTERFACE (286) 20 21 22 23 24 25
T_LEFT_CURLY_BRACKET (287) 16 19 49 50 53 54 180 185 198 216
T_LEFT_PARANTHESIS (288) 75 114 185 224 225 233 235
T_LEFT_SQUARE_BRACKET (289) 211
T_LESS_THAN_SIGN (290) 202 203 204 206 244
T_LONG (291) 158 165 166 171 172
T_MINUS_SIGN (292) 103 108
T_MODULE (293) 16
T_OCTET (294) 176
T_ONEWAY (295) 221
T_OUT (296) 230
T_PERCENT_SIGN (297) 107
T_PLUS_SIGN (298) 102 109
T_PRINCIPAL (299) 247
T_RAISES (300) 233
T_READONLY (301) 213
T_RIGHT_CURLY_BRACKET (302) 16 19 49 50 53 54 180 185 198 216
T_RIGHT_PARANTHESIS (303) 75 114 185 224 225 233 235
T_RIGHT_SQUARE_BRACKET (304) 211
T_SCOPE (305) 40 41
T_SEMICOLON (306) 5 6 7 8 9 10 30 31 32 33 34 73 74 75 183 194
T_SEQUENCE (307) 202 203
T_SHIFTLEFT (308) 100
T_SHIFTRIGHT (309) 99
T_SHORT (310) 164 170
T_SOLIDUS (311) 106
T_STRING (312) 204 205
T_STRING_LITERAL (313) 238 239
T_PRAGMA (314) 13
T_STRUCT (315) 180
T_SWITCH (316) 185
T_TILDE (317) 110
T_TRUE (318) 120
T_OBJECT (319) 178
T_TYPEDEF (320) 123
T_UNION (321) 185
T_UNSIGNED (322) 170 171 172
T_VERTICAL_LINE (323) 93
T_VOID (324) 223
T_WCHAR (325) 174
T_WSTRING (326) 206 207
T_UNKNOWN (327)
T_ABSTRACT (328) 21 24 25 47 49 50
T_VALUETYPE (329) 46 47 48 49 50 57 58 59 60
T_TRUNCATABLE (330) 66 67
T_SUPPORTS (331) 62 63
T_CUSTOM (332) 58 60
T_PUBLIC (333) 73
T_PRIVATE (334) 74
T_FACTORY (335) 75
T_NATIVE (336) 127
T_VALUEBASE (337) 246


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
specification (84)
    on left: 1 2, on right: 0
definitions (85)
    on left: 3 4, on right: 2 4 16
definition (86)
    on left: 5 6 7 8 9 10 11 12, on right: 3 4
pragma (87)
    on left: 13, on right: 11
module (88)
    on left: 16, on right: 9
$@1 (89)
    on left: 14, on right: 16
$@2 (90)
    on left: 15, on right: 16
interface (91)
    on left: 17 18, on right: 8
interface_dcl (92)
    on left: 19, on right: 17
forward_dcl (93)
    on left: 20 21, on right: 18
interface_header (94)
    on left: 22 23 24 25, on right: 19
interface_body (95)
    on left: 26 27, on right: 19
exports (96)
    on left: 28 29, on right: 27 29 52
export (97)
    on left: 30 31 32 33 34, on right: 28 29 70
interface_inheritance_spec (98)
    on left: 35, on right: 23 25
interface_names (99)
    on left: 36, on right: 35 62 63
scoped_names (100)
    on left: 37 38, on right: 36 38 68 233
scoped_name (101)
    on left: 39 40 41, on right: 37 38 41 69 89 112 132 190 243
value (102)
    on left: 42 43 44 45, on right: 10
value_forward_dcl (103)
    on left: 46 47, on right: 45
value_box_dcl (104)
    on left: 48, on right: 44
value_abs_dcl (105)
    on left: 49 50, on right: 43
value_body (106)
    on left: 51 52, on right: 49 50
value_dcl (107)
    on left: 53 54, on right: 42
value_elements (108)
    on left: 55 56, on right: 53 56
value_header (109)
    on left: 57 58 59 60, on right: 53 54
value_inheritance_spec (110)
    on left: 61 62 63, on right: 50 57 58
value_inheritance_bases (111)
    on left: 64 65 66 67, on right: 61 62
value_names (112)
    on left: 68, on right: 65 67
value_name (113)
    on left: 69, on right: 64 65 66 67
value_element (114)
    on left: 70 71 72, on right: 55 56
state_member (115)
    on left: 73 74, on right: 71
init_dcl (116)
    on left: 75, on right: 72
init_param_decls (117)
    on left: 76 77, on right: 75 77
init_param_decl (118)
    on left: 78, on right: 76 77
init_param_attribute (119)
    on left: 79, on right: 78
const_dcl (120)
    on left: 80, on right: 6 31
const_type (121)
    on left: 81 82 83 84 85 86 87 88 89 90, on right: 80
const_exp (122)
    on left: 91, on right: 80 114 122 195
or_expr (123)
    on left: 92 93, on right: 91 93
xor_expr (124)
    on left: 94 95, on right: 92 93 95
and_expr (125)
    on left: 96 97, on right: 94 95 97
shift_expr (126)
    on left: 98 99 100, on right: 96 97 99 100
add_expr (127)
    on left: 101 102 103, on right: 98 99 100 102 103
mult_expr (128)
    on left: 104 105 106 107, on right: 101 102 103 105 106 107
unary_expr (129)
    on left: 108 109 110 111, on right: 104 105 106 107
primary_expr (130)
    on left: 112 113 114, on right: 108 109 110 111
literal (131)
    on left: 115 116 117 118 119 120 121, on right: 113
positive_int_const (132)
    on left: 122, on right: 202 204 206 211 244
type_dcl (133)
    on left: 123 124 125 126 127, on right: 5 30
type_spec (134)
    on left: 128 129, on right: 48 73 74 123 183 197
simple_type_spec (135)
    on left: 130 131 132, on right: 128 202 203
base_type_spec (136)
    on left: 133 134 135 136 137 138 139 140 141 142, on right: 130
    240
template_type_spec (137)
    on left: 143 144 145 146, on right: 131
constr_type_spec (138)
    on left: 147 148 149, on right: 129
declarators (139)
    on left: 150 151, on right: 73 74 123 151 183
declarator (140)
    on left: 152 153, on right: 150 151 197
simple_declarator (141)
    on left: 154, on right: 78 127 152 214 215 228
complex_declarator (142)
    on left: 155, on right: 153
floating_pt_type (143)
    on left: 156 157 158, on right: 85 133
integer_type (144)
    on left: 159 160, on right: 81 134 186
signed_int (145)
    on left: 161 162 163, on right: 159
signed_short_int (146)
    on left: 164, on right: 162
signed_long_int (147)
    on left: 165, on right: 161
signed_longlong_int (148)
    on left: 166, on right: 163
unsigned_int (149)
    on left: 167 168 169, on right: 160
unsigned_short_int (150)
    on left: 170, on right: 168
unsigned_long_int (151)
    on left: 171, on right: 167
unsigned_longlong_int (152)
    on left: 172, on right: 169
char_type (153)
    on left: 173, on right: 82 135 187
wide_char_type (154)
    on left: 174, on right: 83 136
boolean_type (155)
    on left: 175, on right: 84 137 188
octet_type (156)
    on left: 176, on right: 90 138
any_type (157)
    on left: 177, on right: 139
object_type (158)
    on left: 178, on right: 140
struct_type (159)
    on left: 180, on right: 124 147
@3 (160)
    on left: 179, on right: 180
member_list (161)
    on left: 181 182, on right: 180 182
member (162)
    on left: 183, on right: 181 182 218
union_type (163)
    on left: 185, on right: 125 148
@4 (164)
    on left: 184, on right: 185
switch_type_spec (165)
    on left: 186 187 188 189 190, on right: 185
switch_body (166)
    on left: 191 192, on right: 185 192
case (167)
    on left: 193 194, on right: 191 192 193
case_label (168)
    on left: 195 196, on right: 193 194
element_spec (169)
    on left: 197, on right: 194
enum_type (170)
    on left: 198, on right: 126 149 189
enumerators (171)
    on left: 199 200, on right: 198 200
enumerator (172)
    on left: 201, on right: 199 200
sequence_type (173)
    on left: 202 203, on right: 143
string_type (174)
    on left: 204 205, on right: 86 144 241
wide_string_type (175)
    on left: 206 207, on right: 87 145 242
array_declarator (176)
    on left: 208, on right: 155
fixed_array_sizes (177)
    on left: 209 210, on right: 208 210
fixed_array_size (178)
    on left: 211, on right: 209 210
attr_dcl (179)
    on left: 212 213, on right: 33
simple_declarators (180)
    on left: 214 215, on right: 212 213 215
except_dcl (181)
    on left: 216, on right: 7 32
members (182)
    on left: 217 218, on right: 216 218
op_dcl (183)
    on left: 219, on right: 34
op_attribute (184)
    on left: 220 221, on right: 219
op_type_spec (185)
    on left: 222 223, on right: 219
parameter_dcls (186)
    on left: 224 225, on right: 219
param_dcls (187)
    on left: 226 227, on right: 224 227
param_dcl (188)
    on left: 228, on right: 226 227
param_attribute (189)
    on left: 229 230 231, on right: 228
raises_expr (190)
    on left: 232 233, on right: 219
context_expr (191)
    on left: 234 235, on right: 219
string_literals (192)
    on left: 236 237, on right: 235 237
T_string_literal (193)
    on left: 238 239, on right: 116 236 237 239
param_type_spec (194)
    on left: 240 241 242 243, on right: 78 212 213 222 228
fixed_pt_type (195)
    on left: 244, on right: 146
fixed_pt_const_type (196)
    on left: 245, on right: 88
value_base_type (197)
    on left: 246, on right: 141
principal_type (198)
    on left: 247, on right: 142


State 0

    0 $accept: . specification $end

    error        shift, and go to state 1
    T_CONST      shift, and go to state 2
    T_ENUM       shift, and go to state 3
    T_EXCEPTION  shift, and go to state 4
    T_INTERFACE  shift, and go to state 5
    T_MODULE     shift, and go to state 6
    T_PRAGMA     shift, and go to state 7
    T_STRUCT     shift, and go to state 8
    T_TYPEDEF    shift, and go to state 9
    T_UNION      shift, and go to state 10
    T_ABSTRACT   shift, and go to state 11
    T_VALUETYPE  shift, and go to state 12
    T_CUSTOM     shift, and go to state 13
    T_NATIVE     shift, and go to state 14

    $end  reduce using rule 1 (specification)

    specification      go to state 15
    definitions        go to state 16
    definition         go to state 17
    pragma             go to state 18
    module             go to state 19
    interface          go to state 20
    interface_dcl      go to state 21
    forward_dcl        go to state 22
    interface_header   go to state 23
    value              go to state 24
    value_forward_dcl  go to state 25
    value_box_dcl      go to state 26
    value_abs_dcl      go to state 27
    value_dcl          go to state 28
    value_header       go to state 29
    const_dcl          go to state 30
    type_dcl           go to state 31
    struct_type        go to state 32
    union_type         go to state 33
    enum_type          go to state 34
    except_dcl         go to state 35


State 1

   12 definition: error .

    $default  reduce using rule 12 (definition)


State 2

   80 const_dcl: T_CONST . const_type T_IDENTIFIER T_EQUAL const_exp

    T_BOOLEAN     shift, and go to state 36
    T_CHAR        shift, and go to state 37
    T_DOUBLE      shift, and go to state 38
    T_FIXED       shift, and go to state 39
    T_FLOAT       shift, and go to state 40
    T_IDENTIFIER  shift, and go to state 41
    T_LONG        shift, and go to state 42
    T_OCTET       shift, and go to state 43
    T_SCOPE       shift, and go to state 44
    T_SHORT       shift, and go to state 45
    T_STRING      shift, and go to state 46
    T_UNSIGNED    shift, and go to state 47
    T_WCHAR       shift, and go to state 48
    T_WSTRING     shift, and go to state 49

    scoped_name            go to state 50
    const_type             go to state 51
    floating_pt_type       go to state 52
    integer_type           go to state 53
    signed_int             go to state 54
    signed_short_int       go to state 55
    signed_long_int        go to state 56
    signed_longlong_int    go to state 57
    unsigned_int           go to state 58
    unsigned_short_int     go to state 59
    unsigned_long_int      go to state 60
    unsigned_longlong_int  go to state 61
    char_type              go to state 62
    wide_char_type         go to state 63
    boolean_type           go to state 64
    octet_type             go to state 65
    string_type            go to state 66
    wide_string_type       go to state 67
    fixed_pt_const_type    go to state 68


State 3

  198 enum_type: T_ENUM . T_IDENTIFIER T_LEFT_CURLY_BRACKET enumerators T_RIGHT_CURLY_BRACKET

    T_IDENTIFIER  shift, and go to state 69


State 4

  216 except_dcl: T_EXCEPTION . T_IDENTIFIER T_LEFT_CURLY_BRACKET members T_RIGHT_CURLY_BRACKET

    T_IDENTIFIER  shift, and go to state 70


State 5

   20 forward_dcl: T_INTERFACE . T_IDENTIFIER
   22 interface_header: T_INTERFACE . T_IDENTIFIER
   23                 | T_INTERFACE . T_IDENTIFIER interface_inheritance_spec

    T_IDENTIFIER  shift, and go to state 71


State 6

   16 module: T_MODULE . T_IDENTIFIER $@1 T_LEFT_CURLY_BRACKET definitions $@2 T_RIGHT_CURLY_BRACKET

    T_IDENTIFIER  shift, and go to state 72


State 7

   13 pragma: T_PRAGMA .

    $default  reduce using rule 13 (pragma)


State 8

  180 struct_type: T_STRUCT . T_IDENTIFIER @3 T_LEFT_CURLY_BRACKET member_list T_RIGHT_CURLY_BRACKET

    T_IDENTIFIER  shift, and go to state 73


State 9

  123 type_dcl: T_TYPEDEF . type_spec declarators

    T_ANY         shift, and go to state 74
    T_BOOLEAN     shift, and go to state 36
    T_CHAR        shift, and go to state 37
    T_DOUBLE      shift, and go to state 38
    T_ENUM        shift, and go to state 3
    T_FIXED       shift, and go to state 75
    T_FLOAT       shift, and go to state 40
    T_IDENTIFIER  shift, and go to state 41
    T_LONG        shift, and go to state 42
    T_OCTET       shift, and go to state 43
    T_PRINCIPAL   shift, and go to state 76
    T_SCOPE       shift, and go to state 44
    T_SEQUENCE    shift, and go to state 77
    T_SHORT       shift, and go to state 45
    T_STRING      shift, and go to state 46
    T_STRUCT      shift, and go to state 8
    T_OBJECT      shift, and go to state 78
    T_UNION       shift, and go to state 10
    T_UNSIGNED    shift, and go to state 47
    T_WCHAR       shift, and go to state 48
    T_WSTRING     shift, and go to state 49
    T_VALUEBASE   shift, and go to state 79

    scoped_name            go to state 80
    type_spec              go to state 81
    simple_type_spec       go to state 82
    base_type_spec         go to state 83
    template_type_spec     go to state 84
    constr_type_spec       go to state 85
    floating_pt_type       go to state 86
    integer_type           go to state 87
    signed_int             go to state 54
    signed_short_int       go to state 55
    signed_long_int        go to state 56
    signed_longlong_int    go to state 57
    unsigned_int           go to state 58
    unsigned_short_int     go to state 59
    unsigned_long_int      go to state 60
    unsigned_longlong_int  go to state 61
    char_type              go to state 88
    wide_char_type         go to state 89
    boolean_type           go to state 90
    octet_type             go to state 91
    any_type               go to state 92
    object_type            go to state 93
    struct_type            go to state 94
    union_type             go to state 95
    enum_type              go to state 96
    sequence_type          go to state 97
    string_type            go to state 98
    wide_string_type       go to state 99
    fixed_pt_type          go to state 100
    value_base_type        go to state 101
    principal_type         go to state 102


State 10

  185 union_type: T_UNION . T_IDENTIFIER T_SWITCH T_LEFT_PARANTHESIS switch_type_spec T_RIGHT_PARANTHESIS @4 T_LEFT_CURLY_BRACKET switch_body T_RIGHT_CURLY_BRACKET

    T_IDENTIFIER  shift, and go to state 103


State 11

   21 forward_dcl: T_ABSTRACT . T_INTERFACE T_IDENTIFIER
   24 interface_header: T_ABSTRACT . T_INTERFACE T_IDENTIFIER
   25                 | T_ABSTRACT . T_INTERFACE T_IDENTIFIER interface_inheritance_spec
   47 value_forward_dcl: T_ABSTRACT . T_VALUETYPE T_IDENTIFIER
   49 value_abs_dcl: T_ABSTRACT . T_VALUETYPE T_IDENTIFIER T_LEFT_CURLY_BRACKET value_body T_RIGHT_CURLY_BRACKET
   50              | T_ABSTRACT . T_VALUETYPE T_IDENTIFIER value_inheritance_spec T_LEFT_CURLY_BRACKET value_body T_RIGHT_CURLY_BRACKET

    T_INTERFACE  shift, and go to state 104
    T_VALUETYPE  shift, and go to state 105


State 12

   46 value_forward_dcl: T_VALUETYPE . T_IDENTIFIER
   48 value_box_dcl: T_VALUETYPE . T_IDENTIFIER type_spec
   57 value_header: T_VALUETYPE . T_IDENTIFIER value_inheritance_spec
   59             | T_VALUETYPE . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 106


State 13

   58 value_header: T_CUSTOM . T_VALUETYPE T_IDENTIFIER value_inheritance_spec
   60             | T_CUSTOM . T_VALUETYPE T_IDENTIFIER

    T_VALUETYPE  shift, and go to state 107


State 14

  127 type_dcl: T_NATIVE . simple_declarator

    T_IDENTIFIER  shift, and go to state 108

    simple_declarator  go to state 109


State 15

    0 $accept: specification . $end

    $end  shift, and go to state 110


State 16

    2 specification: definitions .

    $default  reduce using rule 2 (specification)


State 17

    3 definitions: definition .
    4            | definition . definitions

    error        shift, and go to state 1
    T_CONST      shift, and go to state 2
    T_ENUM       shift, and go to state 3
    T_EXCEPTION  shift, and go to state 4
    T_INTERFACE  shift, and go to state 5
    T_MODULE     shift, and go to state 6
    T_PRAGMA     shift, and go to state 7
    T_STRUCT     shift, and go to state 8
    T_TYPEDEF    shift, and go to state 9
    T_UNION      shift, and go to state 10
    T_ABSTRACT   shift, and go to state 11
    T_VALUETYPE  shift, and go to state 12
    T_CUSTOM     shift, and go to state 13
    T_NATIVE     shift, and go to state 14

    $end                   reduce using rule 3 (definitions)
    T_RIGHT_CURLY_BRACKET  reduce using rule 3 (definitions)

    definitions        go to state 111
    definition         go to state 17
    pragma             go to state 18
    module             go to state 19
    interface          go to state 20
    interface_dcl      go to state 21
    forward_dcl        go to state 22
    interface_header   go to state 23
    value              go to state 24
    value_forward_dcl  go to state 25
    value_box_dcl      go to state 26
    value_abs_dcl      go to state 27
    value_dcl          go to state 28
    value_header       go to state 29
    const_dcl          go to state 30
    type_dcl           go to state 31
    struct_type        go to state 32
    union_type         go to state 33
    enum_type          go to state 34
    except_dcl         go to state 35


State 18

   11 definition: pragma .

    $default  reduce using rule 11 (definition)


State 19

    9 definition: module . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 112


State 20

    8 definition: interface . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 113


State 21

   17 interface: interface_dcl .

    $default  reduce using rule 17 (interface)


State 22

   18 interface: forward_dcl .

    $default  reduce using rule 18 (interface)


State 23

   19 interface_dcl: interface_header . T_LEFT_CURLY_BRACKET interface_body T_RIGHT_CURLY_BRACKET

    T_LEFT_CURLY_BRACKET  shift, and go to state 114


State 24

   10 definition: value . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 115


State 25

   45 value: value_forward_dcl .

    $default  reduce using rule 45 (value)


State 26

   44 value: value_box_dcl .

    $default  reduce using rule 44 (value)


State 27

   43 value: value_abs_dcl .

    $default  reduce using rule 43 (value)


State 28

   42 value: value_dcl .

    $default  reduce using rule 42 (value)


State 29

   53 value_dcl: value_header . T_LEFT_CURLY_BRACKET value_elements T_RIGHT_CURLY_BRACKET
   54          | value_header . T_LEFT_CURLY_BRACKET T_RIGHT_CURLY_BRACKET

    T_LEFT_CURLY_BRACKET  shift, and go to state 116


State 30

    6 definition: const_dcl . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 117


State 31

    5 definition: type_dcl . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 118


State 32

  124 type_dcl: struct_type .

    $default  reduce using rule 124 (type_dcl)


State 33

  125 type_dcl: union_type .

    $default  reduce using rule 125 (type_dcl)


State 34

  126 type_dcl: enum_type .

    $default  reduce using rule 126 (type_dcl)


State 35

    7 definition: except_dcl . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 119


State 36

  175 boolean_type: T_BOOLEAN .

    $default  reduce using rule 175 (boolean_type)


State 37

  173 char_type: T_CHAR .

    $default  reduce using rule 173 (char_type)


State 38

  157 floating_pt_type: T_DOUBLE .

    $default  reduce using rule 157 (floating_pt_type)


State 39

  245 fixed_pt_const_type: T_FIXED .

    $default  reduce using rule 245 (fixed_pt_const_type)


State 40

  156 floating_pt_type: T_FLOAT .

    $default  reduce using rule 156 (floating_pt_type)


State 41

   39 scoped_name: T_IDENTIFIER .

    $default  reduce using rule 39 (scoped_name)


State 42

  158 floating_pt_type: T_LONG . T_DOUBLE
  165 signed_long_int: T_LONG .
  166 signed_longlong_int: T_LONG . T_LONG
